spade-tests/src/snapshots/spade_tests__wordlength_inference__simple_multiple_addition_ia.snap
---
source: spade-tests/src/wordlength_inference.rs
---
fn f(a: int<4>) -> int<0> {
  a + a + a + a
}
entity main(clk: clock, rst: bool) -> int<0> { f(1) }


error: 
  ┌─ testinput:2:3
  │
2 │   a + a + a + a
  │   ^^^^^^^^^^^^^ This expression requires 6 bits but the typechecker claims it needs 2 bits

error: 
  ┌─ testinput:4:48
  │
4 │ entity main(clk: clock, rst: bool) -> int<0> { f(1) }
  │                                                ^^^^ This expression requires 2 bits but the typechecker claims it needs 0 bits


