spade-tests/src/snapshots/spade_tests__wordlength_inference__simple_subtraction_one.snap
---
source: spade-tests/src/wordlength_inference.rs
---
fn f(a: int<4>) -> int<0> {
  a - a + 1
}
entity main(clk: clock, rst: bool) -> int<0> { f(1) }


error: Type error
  ┌─ testinput:1:27
  │  
1 │   fn f(a: int<4>) -> int<0> {
  │                      ------ int<0> type specified here
  │ ╭───────────────────────────^
2 │ │   a - a + 1
3 │ │ }
  │ ╰─^ Found type int<6>
  │  
  = Expected: 0
  =       in: int<0>
  =      Got: 6
  =       in: int<6>


